Продолжаем чистить CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBRARIES})
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE -D_UNICODE -DSTATIC_LINK)
+target_compile_definitions(${PROJECT_NAME} PRIVATE -D_UNICODE)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
